syntax = "proto3";

option csharp_namespace = "Proto";

package greet;

// The greeting service definition.
service Wrapper {
  // Sends a greeting
  rpc WrapText (WrapRequest) returns (WrapReply);
}

// The request message containing the user's name.
message WrapRequest {
  string line = 1;
  int32 columns = 2;
}

// The response message containing the greetings.
message WrapReply {
  string text = 1;
}
